--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "prettier": "^2.8.3",
-    "typescript": "*"
+    "typescript": "*",
+    "vitest": "^0.28.4"
   }
 }
