--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "lint": "eslint --ext .js,.ts ."
+    "lint": "eslint --ext .js,.ts .",
+    "build": "tsc",
+    "watch": "tsc -w"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.0.0",
