--- a/package.json
+++ b/package.json
@@ -1,24 +1,12 @@
 {
-  "name": "action-pump",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
+  "private": "true",
+  "workspaces": [
+    "async-action-pump",
+    "event-utils"
+  ],
   "scripts": {
     "lint": "eslint --ext .js,.ts .",
-    "build": "tsc",
+    "build": "yarn --cwd async-action-pump build && yarn --cwd event-utils build",
     "watch": "tsc -w"
-  },
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.50.0",
-    "eslint": "^8.0.1",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-config-standard-with-typescript": "^34.0.0",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-n": "^15.0.0",
-    "eslint-plugin-promise": "^6.0.0",
-    "prettier": "^2.8.3",
-    "typescript": "*",
-    "vitest": "^0.28.4"
   }
 }
