--- a/package.json
+++ b/package.json
@@ -6,6 +6,6 @@
   ],
   "scripts": {
     "lint": "eslint --ext .js,.ts .",
-    "build": "yarn --cwd ./async-action-pump build && yarn --cwd ./event-utils build"
+    "build": "yarn --cwd ./event-utils build &&yarn --cwd ./async-action-pump build"
   }
 }
