--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,8 @@
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "rules": {},
+  "rules": {
+    "@typescript-eslint/no-explicit-any": "off"
+  },
   "ignorePatterns": ["dist/", "**/node_modules/"]
 }
